xdp-project.org: Add word to "XDP generic" heading
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/xdp-project.org
+++ b/xdp-project.org
@@ -516,7 +516,7 @@ investigated.
 Maybe write a tuning doc as well?
 
 WAIT status as this is low priority for now.
-** TODO Generic XDP
+** TODO Generic XDP fixes
 Various fixes that should be fixed in generic XDP eventually
 
 *** TODO Bulking for redirect maps
