--- a/conference/NetConf2019/friendlier-xdp-redirect.org
+++ b/conference/NetConf2019/friendlier-xdp-redirect.org
@@ -1,12 +1,11 @@
 # -*- fill-column: 79; -*-
 #+TITLE: Creating a friendlier UAPI for XDP_REDIRECT
-#+AUTHOR: Toke Høiland-Jørgensen and Jesper Dangaard Brouer
+#+AUTHOR: Toke Høiland-Jørgensen <toke@redhat.com>
 #+EMAIL: toke@redhat.com
 #+REVEAL_THEME: redhat
 #+REVEAL_TRANS: linear
 #+REVEAL_MARGIN: 0
-#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom-netconf.js'}
-#+REVEAL_EXTRA_CSS: ./reveal.js/css/custom-adjust-logo.css
+#+REVEAL_EXTRA_JS: { src: './reveal.js/js/redhat.js'}
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
