--- a/conference/NetConf2019/xdp-metadata-discussion.org
+++ b/conference/NetConf2019/xdp-metadata-discussion.org
@@ -1,12 +1,11 @@
 # -*- fill-column: 79; -*-
 #+TITLE: SKB creation outside drivers: using metadata and HW-offloads?
-#+AUTHOR: Jesper Dangaard Brouer and Toke Høiland-Jørgensen
+#+AUTHOR: Jesper Dangaard Brouer <brouer@redhat.com>
 #+EMAIL: brouer@redhat.com
 #+REVEAL_THEME: redhat
 #+REVEAL_TRANS: linear
 #+REVEAL_MARGIN: 0
-#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom-netconf-metadata.js'}
-#+REVEAL_EXTRA_CSS: ./reveal.js/css/custom-adjust-logo.css
+#+REVEAL_EXTRA_JS: { src: './reveal.js/js/redhat.js'}
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
