netconf/xdp-feature-planning: Colours and updates to slides
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/NetConf2019/xdp-feature-planning.org
+++ b/conference/NetConf2019/xdp-feature-planning.org
@@ -77,33 +77,37 @@ Colors are choosen via org-mode italic/bold high-lighting:
 - We've created a [[https://github.com/xdp-project/xdp-project][Github repository]] for XDP feature planning
 - The [[https://github.com/xdp-project/xdp-tutorial][XDP tutorial]] lives in the same Github org
 - Goal of this discussion:
-  - Make you all aware of its existence and how it works
-  - Give a short overview of what's in there
-  - Get some feedback
-  - Hopefully get (some of) you to contribute :)
+  - Make you all /aware of its existence/ and how it works
+  - Give a *short overview* of what's in there
+  - Get some /*feedback*/
+  - Hopefully get (some of) you to /contribute/ :)
 
 * Slide: Contents of the xdp-project repo                            :export:
 Org-mode files describing various aspects of XDP planning
 
-- Toplevel:
-  - =xdp-project.org= - general TODO entries
+- =xdp-project.org= - /general/ TODO entries
 - Areas: =areas/*.org=
-  - Top-level .org files: TODO item tracking
-  - Subdirs: More detailed notes, performance numbers, etc.
+  - Top-level .org files: *TODO items* for tracking projects
+  - Subdirs: More detailed /*notes*/, performance numbers, etc.
   - Current areas:
-    - =cpumap.org=, =drivers.org=, =mem.org=
-    - =ovs.org=,  =xdp_flowcache.org=, =xdp-tutorial.org=
-- Conferences: Slides for XDP talks at various conferences
+    #+ATTR_HTML: :style columns: 2;
+    - =cpumap.org=
+    - =drivers.org=
+    - =mem.org=
+    - =ovs.org=
+    - =xdp_flowcache.org=
+    - =xdp-tutorial.org=
+- Conferences: /Slides/ for XDP talks at various conferences
   - Including this one :)
 
 ** Slide: Repo logic for each file                                  :export:
 
-- Top-level "projects"
+- Top-level "/projects/"
   - A "project" is any TODO with sub-TODOs
-  - Use TODO-keyword =NEXT= for "immediate" tasks
+  - Use TODO-keyword =NEXT= for *"immediate"* tasks
   - Ex: Project: "Handling XDP_REDIRECT failures"
 
-- Projects categorised in three (somewhat fluid) categories:
+- Projects categorised in three (somewhat fluid) /categories/:
 
   - "Current high-priority tasks" - tag =@short=
   - "Important medium-term tasks" - tag =@medium=
@@ -111,18 +115,18 @@ Org-mode files describing various aspects of XDP planning
 
 * Slide: Why have this repo at all?                                  :export:
 
-- Document progress, known issues, feature plan
+- /External/ documentation of progress, known issues, feature plan
   - Somewhere to point users and PHBs
-- Keeping track of our own work + ensure follow-up
+- *Internal* tracking of our own work + ensuring follow-up
   - I am the self-assigned "cat herder"
-- Make it possible to plan and prioritise, at least a bit
+- Make it possible to /*plan and prioritise*/, at least a bit
 
 
 ** Slide: Why org-mode?                                             :export:
-- Really powerful query + project management tool.
+- Really powerful /query + project management/ tool.
   - Can pull out agenda views (demo?)
-- Originates from Emacs world, but also has a =vim= implementation
-- But you can also just /treat them as text files/!
+- Originates from *Emacs* world, but also has a =vim= implementation
+- But you can also just /*treat them as text files*/!
   - Jesper and I will do the project management work
 
 See =org-setup.el= if you do want to give it a shot in Emacs
@@ -159,15 +163,15 @@ See =org-setup.el= if you do want to give it a shot in Emacs
 - Is this useful for anyone else?
   - Is there any way we can make it /more/ useful?
   - E.g., HTML "reports" of various sorts?
-- Please add anything you are working on / would like to see
-  - Pull requests, patches, or just email works
-  - Doesn't *have to* be something you want to work on
+- Please *add anything you are working on* / would like to see
+  - Pull requests, patches, or just send me an email
+  - Doesn't /*have to*/ be something you want to work on (but it helps)
 
 * Emacs tricks
 
 # Local Variables:
 # org-reveal-title-slide: "<h1 class=\"title\">%t</h1>
-# <h2 class=\"author\">Toke Høiland-Jørgensen (Red Hat)<br/></h2>
+# <h2 class=\"author\">%a<br/></h2>
 # <h3>Netconf<br/>Boston, June 2019</h3>"
 # org-export-filter-headline-functions: ((lambda (contents backend info) (replace-regexp-in-string "Slide: " "" contents)))
 # End:
