--- a/conference/NetConf2019/xdp-feature-detection.org
+++ b/conference/NetConf2019/xdp-feature-detection.org
@@ -106,7 +106,7 @@ Wanted to /detect XDP features/ via analysing *return codes* used by program
 - */Not possible/* because map value (register) can be a return value
 - Could still detect XDP_REDIRECT feature, as it needs a helper call
 
-Wanted to /supply XDP features/ used, when *attaching* bpf_prog to a device
+Explicit /supply XDP features/ used, when *attaching* bpf_prog to a device
 - */Not possible/* due to BPF *tail-call* maps (=BPF_MAP_TYPE_PROG_ARRAY=)
 - Driver attach =ndo_bpf= is bypassed, on map insert in tail-call map
 - as map insert becomes second level XDP attach
@@ -120,7 +120,7 @@ One option left: Associate ifindex with bpf_prog *at load time* (like HW-offload
 
 Should likely use net_device NDO (Network Device Operation) call =ndo_bpf=
 - for query (or testing) supported XDP features
-- (Think this was requested by Daniel Borkmann)
+- API kept between driver and kernel-core
 
 * Slide: External userspace API                                      :export:
 
@@ -134,32 +134,32 @@ If BPF /load time/ check is possible
 
 * Slide: BPF-load time ifindex binding (possible???)                 :export:
 
-General idea (like HW-offload): /Supply ifindex at BPF load time/
-- Discuss if this will work... and how to handle pitfalls?
+General idea (like HW-offload): /Supply ifindex/ at *BPF load time*
 
 Our old nemesis: *tail-call* maps
 - Case#1: ifindex bound XDP-prog use tail-call (map)
   - Issue: what stops adding non-ifindex XDP-prog to this tail-call-map?
 - Case#2: Can NIC-A XDP-prog tail-call XDP-prog bound to NIC-B?
+- Solution(?): Bind tail-call map to ifindex? (on first insert)
 
 Pitfall: *Generic-XDP*
-- At BPF load time, don't know if used for native or generic-XDP
-
-Challenge: only input is ifindex
-- *How to supply or detect features?*
+- At BPF load time, don't know if used for /native or generic/-XDP
+  - (1) supply more info than ifindex?
+  - (2) let ifindex imply native-XDP?
 
 * Slide: Can verifier detect XDP features?                           :export:
 
 Either need to /supply features/ (more input than =ifindex=)
 - *Or* verifier needs to be able to /detect features/
 
-Verifier *detection strategy*:
+Verifier *detection strategy*, to construct XDP features in-use
 - If XDP return code comes from register/map
   - then assume all XDP-return codes in use
 - Except: can remove XDP_REDIRECT if redirect-helper isn't used
 
-Again: What if BPF-prog is only used for *generic-XDP?*
-- Are we /forced to supply more than =ifindex= ?/
+Again remember:
+- Verifier don't know if BPF-prog is used for *generic-XDP*
+- Are we /forced to supply more info than =ifindex= ?/
 
 * Slide: End                                                         :export:
 
