--- a/conference/NetConf2019/xdp-metadata-discussion.org
+++ b/conference/NetConf2019/xdp-metadata-discussion.org
@@ -189,11 +189,13 @@ XDP have 32 bytes *metadata* in front of payload (=xdp_buff->data_meta=)
 
 Can we allow XDP to update offload info area?
 - Happens before SKB field update
-- Are there any safety issues? (kernel netstack stability)
+- Are there any *safety issues?* (kernel netstack stability)
 - XDP could potentially fix HW-offload fields
 
 Likely need some boundary checks
 - Especially for higher-level protocol header offsets
+
+Can verifier tell us if XDP prog changed metadata area?
 
 * Slide: Lacking knowledge about BTF                                 :export:
 
