NetConf2019: Add final slides used xdp-metadata-discussion.pdf
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetConf2019/xdp-feature-detection.org
+++ b/conference/NetConf2019/xdp-feature-detection.org
@@ -157,6 +157,10 @@ Verifier *detection strategy*, to deduce XDP features in-use
   - then assume all XDP-return codes in use
 - Except: can remove XDP_REDIRECT if redirect-helper isn't used
 
+(Came up yesterday)
+- verifier knows helpers used. e.g. =bpf_xdp_adjust_tail=
+- With jumbo-frames, driver want to know if adjust-tail is used
+
 * Slide: End                                                         :export:
 
 Disclaimer
